# BagOfVisualWords

./: CMakeLists.txt  README.md
cmake/: current_path.h.in
docker/: Dockerfile
include/bow/: bow.h  bow_dictionary.hpp  convert_dataset.hpp  histogram.hpp  histogram_dataset.hpp  html_writer.hpp  image_browser.hpp  kmeans.hpp  query_image.hpp  serialize.hpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  main.cpp
src/bow/: CMakeLists.txt  bow_dictionary.cpp  convert_dataset.cpp  histogram.cpp  histogram_dataset.cpp  html_writer.cpp  image_browser.cpp  kmeans.cpp  query_image.cpp  serialize.cpp
tests/: CMakeLists.txt  test_bow_dictionary.cpp  test_browser.cpp  test_convert_dataset.cpp  test_data.cpp  test_data.hpp  test_dataset.cpp  test_histograms.cpp  test_kmeans.cpp  test_query_image.cpp  test_serialize.cpp
webpage/css/: templatemo-style.css
